[package]
name = "chain"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.0"
array-macro = "2.1.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["gfx", "ttf"]

# [profile.release]
# opt-level = 'z'
# lto = true
# strip = "debuginfo"
# codegen-units = 1
